Address review and Sonar feedback